# rdmp

./: .eslintrc.cjs  .gitignore  .prettierrc.json  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-02-14-082819_create_maps_and_nodes/: down.sql  up.sql
src-tauri/src/: cmd.rs  db.rs  fs.rs  logger.rs  main.rs  models.rs  schema.rs
src/assets/: main.css
src/components/: ContextMenu.vue  DashboardBox.vue  DashboardSection.vue  ModalBase.vue  ModalConfirm.vue  RoadmapModal.vue  RoadmapNode.vue  RoadmapNodeModal.vue  RoadmapPage.vue  SettingsModal.vue  SidebarLink.vue  TheContent.vue  TheDashboard.vue  TheDetails.vue  TheNavbar.vue  TheRoadmap.vue  TheSidebar.vue  VButton.vue  VIconButton.vue  VInput.vue  VLabel.vue  VToggle.vue
src/components/icons/: IconArrowDownOnSquare.vue  IconArrowUpOnSquare.vue  IconBarsBottomLeft.vue  IconEye.vue  IconForward.vue  IconPlusCircle.vue
src/composables/: index.ts
src/helpers/: index.ts
src/router/: index.ts
src/stores/: global.ts  ui.ts
src/views/: DashboardView.vue  RoadmapView.vue
