[package]
name = "rdmp"
version = "0.0.0"
description = ""
authors = ["mincedjuice"]
default-run = "rdmp"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
tokio = { version = "1.21.2", features = ["full"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
flexi_logger = "0.24"
log = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
